<resources>
    <string name="app_name">ParseInstagram</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="username">username</string>
    <string name="take_picture">Take Picture</string>
    <string name="submit">Submit!</string>
    <string name="description">Description. . .</string>
    <string name="image">image</string>
    <string name="sign_up">Sign Up</string>
    <string name="Password">Password</string>
    <string name="finish">Finish</string>
    <string name="Username">Username</string>
    <string name="email">Email</string>
    <string name="log_out">Log Out</string>
</resources>
