<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:layout_margin="10dp">

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/description"
        android:importantForAutofill="no"
        android:inputType="" tools:targetApi="o" />

    <Button
        android:id="@+id/btnCaptureImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/take_picture" />

    <ImageView
        android:id="@+id/ivPostImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:contentDescription="@string/image"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/submit" />

</LinearLayout>